Fixed Education Logos

--- a/education.html
+++ b/education.html
@@ -64,6 +64,65 @@
                                     <li class="have-submenu">
                                         <a href="#">Industry</a>
                                         <ul class="submenu">
+                                            <li><a href="#">CJIS</a></li>
+                                            <li><a href="#">Healthcare</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="have-submenu">
+                                        <a href="#">Specialization</a>
+                                        <ul class="submenu">
+                                            <li><a href="#">Citrix</a></li>
+                                            <li><a href="#">Office 365</a></li>
+                                            <li><a href="#">Sharepoint</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li><a class="active" href="#">Education </a></li>
+                            <li class="have-dropdown">
+                                <a href="#">Resources </a>
+                                <ul class="dropdown">
+                                    <li><a href="#">Resorce Center</a></li>
+                                    <li class="have-submenu">
+                                        <a href="#">Pain Points</a>
+                                        <ul class="submenu">
+                                            <li><a href="#">Customer pains</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#">White Papers</a></li>
+                                    <li><a href="#">Webinars</a></li>
+                                    <li><a href="#">Visual</a></li>
+                                    <li><a href="#">Comparsion Guides</a></li>
+                                    <li><a href="#">Blog</a></li>
+                                </ul>
+                            </li>
+                            <li class="have-dropdown">
+                                <a href="#">Company</a>
+                                <ul class="dropdown">
+                                    <li><a href="#">About</a></li>
+                                    <li><a href="#">PistolStar Culture</a></li>
+                                    <li><a href="#">Testimontials</a></li>
+                                    <li><a href="#">Talking About US</a></li>
+                                    <li><a href="#">News and Press</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="d-flex align-items-center hide-mobile">
+                        <a class="page-header__nav--contact" href="#">Contact Us</a>
+                    </div>
+                </div>
+            </header>
+            <div class="mobile-menu-content page-header__nav">
+                    <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Our Features</a></li>
+                            <li class="have-dropdown">
+                                <a href="#">Integration</a>
+                                <ul class="dropdown">
+                                    <li class="have-submenu">
+                                        <a href="#">Packages</a>
+                                        <ul class="submenu">
                                             <li><a href="#">Apache</a></li>
                                             <li><a href="#">Domino</a></li>
                                             <li><a href="#">Education</a></li>
@@ -73,58 +132,53 @@
                                             <li><a href="#">Websphere</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="#">Specialization</a></li>
+                                    <li><a href="#">Active Directory</a></li>
+                                    <li class="have-submenu">
+                                        <a href="#">Industry</a>
+                                        <ul class="submenu">
+                                            <li><a href="#">CJIS</a></li>
+                                            <li><a href="#">Healthcare</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="have-submenu">
+                                        <a href="#">Specialization</a>
+                                        <ul class="submenu">
+                                            <li><a href="#">Citrix</a></li>
+                                            <li><a href="#">Office 365</a></li>
+                                            <li><a href="#">Sharepoint</a></li>
+                                        </ul>
+                                    </li>
                                 </ul>
                             </li>
                             <li><a class="active" href="#">Education </a></li>
-                            <li><a href="#">Resources </a></li>
-                            <li><a href="#">Company</a></li>
-                        </ul>
-                    </nav>
-                    <div class="d-flex align-items-center hide-mobile">
-                        <a class="page-header__nav--contact" href="#">Contact Us</a>
-                    </div>
-                </div>
-            </header>
-            <div class="mobile-menu-content page-header__nav">
-                <ul>
-                    <li><a class="active" href="#">Home</a></li>
-                    <li><a href="#">Our Features</a></li>
-                    <li class="have-dropdown">
-                        <a href="#">Integration</a>
-                        <ul class="dropdown">
-                            <li class="have-submenu">
-                                <a href="#">Packages</a>
-                                <ul class="submenu">
-                                    <li><a href="#">Apache</a></li>
-                                    <li><a href="#">Domino</a></li>
-                                    <li><a href="#">Education</a></li>
-                                    <li><a href="#">IIS</a></li>
-                                    <li><a href="#">Office 365</a></li>
-                                    <li><a href="#">Sharepoint</a></li>
-                                    <li><a href="#">Websphere</a></li>
+                            <li class="have-dropdown">
+                                <a href="#">Resources </a>
+                                <ul class="dropdown">
+                                    <li><a href="#">Resorce Center</a></li>
+                                    <li class="have-submenu">
+                                        <a href="#">Pain Points</a>
+                                        <ul class="submenu">
+                                            <li><a href="#">Customer pains</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#">White Papers</a></li>
+                                    <li><a href="#">Webinars</a></li>
+                                    <li><a href="#">Visual</a></li>
+                                    <li><a href="#">Comparsion Guides</a></li>
+                                    <li><a href="#">Blog</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#">Active Directory</a></li>
-                            <li class="have-submenu">
-                                <a href="#">Industry</a>
-                                <ul class="submenu">
-                                    <li><a href="#">Apache</a></li>
-                                    <li><a href="#">Domino</a></li>
-                                    <li><a href="#">Education</a></li>
-                                    <li><a href="#">IIS</a></li>
-                                    <li><a href="#">Office 365</a></li>
-                                    <li><a href="#">Sharepoint</a></li>
-                                    <li><a href="#">Websphere</a></li>
+                            <li class="have-dropdown">
+                                <a href="#">Company</a>
+                                <ul class="dropdown">
+                                    <li><a href="#">About</a></li>
+                                    <li><a href="#">PistolStar Culture</a></li>
+                                    <li><a href="#">Testimontials</a></li>
+                                    <li><a href="#">Talking About US</a></li>
+                                    <li><a href="#">News and Press</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#">Specialization</a></li>
                         </ul>
-                    </li>
-                    <li><a href="#">Education </a></li>
-                    <li><a href="#">Resources </a></li>
-                    <li><a href="#">Company</a></li>
-                </ul>
             </div>
        </div>
        <div class="container-fluid hero-img hero-img_education">
@@ -152,37 +206,16 @@
            <div class="container">
                <div class="row">
                    <div class="owl-carousel owl-carousel-logos d-flex align-items-center justify-content-between">
-                       <div><img src="img/companies/aig.png" alt="AIG"></div>
-                       <div><img src="img/companies/amnesty-international.png" alt="amnesty-international"></div>
-                       <div><img src="img/companies/baker-logo.png" alt="Baker"></div>
-                       <div><img src="img/companies/bank-of-new-zealand.png" alt="Bank Of New Zeland"></div>
-                       <div><img src="img/companies//Central_Penn_College_logo.png" alt="Central Penn College"></div>
-                       <div><img src="img/companies/city-college-san-fran.png" alt="City College San Fran"></div>
-                       <div><img src="img/companies/colgate-palmolive.png" alt="Colgate Palmolive"></div>
-                       <div><img src="img/companies//Delaware_County_Community_College_District.png" alt="Delaware County"></div>
-                       <div><img src="img/companies/hale-school.png" alt="Hale School"></div>
-                       <div><img src="img/companies/hershey-entertainment.png" alt="Hershey Entertaiment"></div>
-                       <div><img src="img/companies/liu-logo.png" alt="LIU"></div>
-                       <div><img src="img/companies/neit-logo.png" alt="Neit Logo"></div>
-                       <div><img src="img/companies/New_College_of_Florida.png" alt="New College Florida"></div>
-                       <div><img src="img/companies/orange-business-group.png" alt="Orange"></div>
-                       <div><img src="img/companies/Shasta_College_logo.png" alt="Shasta College"></div>
-                       <div><img src="img/companies/sheetz.png" alt="Sheetz"></div>
-                       <div><img src="img/companies/sodexo.png" alt="Sodexo"></div>
-                       <div><img src="img/companies/spartennash.png" alt="Spartennash"></div>
-                       <div><img src="img/companies/SWC_logo.png" alt="SWC"></div>
-                       <div><img src="img/companies/td-bank.png" alt="TD Bank"></div>
-                       <div><img src="img/companies/tessella-logo.png" alt="Tessella Logo"></div>
-                       <div><img src="img/companies/tufts-healthplan.png" alt="Tufts"></div>
-                       <div><img src="img/companies/ykk.png" alt="YKK"></div>
-                       <div><img src="img/companies/pioneer-logo.png" alt="Pioneer"></div>
-                       <div><img src="img/companies/calabrio.png" alt="Calabrio"></div>
-                       <div><img src="img/companies/maverik-center.png" alt="Maverik"></div>
-                       <div><img src="img/companies/mapfre.png" alt="Mapfre"></div>
-                       <div><img src="img/companies/scsu.png" alt="Scsu"></div>
-                       <div><img src="img/companies/tj-maxx.png" alt="TJ-Maxx"></div>
-                       <div><img src="img/companies/pioneer-logo.png" alt="Pioneer"></div>
-                       <div><img src="img/companies/calabrio.png" alt="Calabrio"></div>
+                        <div><img src="img/companies/education/belhaven-universitty.png" alt="Belhaven"></div>
+                        <div><img src="img/companies/education/contra_costa.png" alt="Contra Costa"></div>
+                        <div><img src="img/companies/education/regis-college.png" alt="Regis College"></div>
+                        <div><img src="img/companies/education/robeson-college-banner.png" alt="Robeson"></div>
+                        <div><img src="img/companies/education/state_fair_logo.png" alt="State Fair"></div>
+                        <div><img src="img/companies/education/sunyempirestate.png" alt="Suny Empire"></div>
+                        <div><img src="img/companies/education/uma.png" alt="UMA"></div>
+                        <div><img src="img/companies/education/University-of-Arkansas-Fort-Smith.png" alt="Arkansas"></div>
+                        <div><img src="img/companies/education/university-of-mount-olive.png" alt="Mount Olive"></div>
+                       <div><img src="img/companies/education/scsu.png" alt="Scsu"></div>
                    </div>
                </div>
            </div>
