--- a/index.html
+++ b/index.html
@@ -42,8 +42,80 @@
                 </div>
                 <div class="col-lg col-md-12 d-flex justify-content-between">
                     <nav class="hide-mobile">
-                        <ul class="page-header__nav">
-                            <li><a class="active" href="#">Home</a></li>
+                            <ul class="page-header__nav">
+                                    <li><a href="#">Home</a></li>
+                                    <li><a href="#">Our Features</a></li>
+                                    <li class="have-dropdown">
+                                        <a href="#">Integration</a>
+                                        <ul class="dropdown">
+                                            <li class="have-submenu">
+                                                <a href="#">Packages</a>
+                                                <ul class="submenu">
+                                                    <li><a href="#">Apache</a></li>
+                                                    <li><a href="#">Domino</a></li>
+                                                    <li><a href="#">Education</a></li>
+                                                    <li><a href="#">IIS</a></li>
+                                                    <li><a href="#">Office 365</a></li>
+                                                    <li><a href="#">Sharepoint</a></li>
+                                                    <li><a href="#">Websphere</a></li>
+                                                </ul>
+                                            </li>
+                                            <li><a href="#">Active Directory</a></li>
+                                            <li class="have-submenu">
+                                                <a href="#">Industry</a>
+                                                <ul class="submenu">
+                                                    <li><a href="#">CJIS</a></li>
+                                                    <li><a href="#">Healthcare</a></li>
+                                                </ul>
+                                            </li>
+                                            <li class="have-submenu">
+                                                <a href="#">Specialization</a>
+                                                <ul class="submenu">
+                                                    <li><a href="#">Citrix</a></li>
+                                                    <li><a href="#">Office 365</a></li>
+                                                    <li><a href="#">Sharepoint</a></li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li><a class="active" href="#">Education </a></li>
+                                    <li class="have-dropdown">
+                                        <a href="#">Resources </a>
+                                        <ul class="dropdown">
+                                            <li><a href="#">Resorce Center</a></li>
+                                            <li class="have-submenu">
+                                                <a href="#">Pain Points</a>
+                                                <ul class="submenu">
+                                                    <li><a href="#">Customer pains</a></li>
+                                                </ul>
+                                            </li>
+                                            <li><a href="#">White Papers</a></li>
+                                            <li><a href="#">Webinars</a></li>
+                                            <li><a href="#">Visual</a></li>
+                                            <li><a href="#">Comparsion Guides</a></li>
+                                            <li><a href="#">Blog</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="have-dropdown">
+                                        <a href="#">Company</a>
+                                        <ul class="dropdown">
+                                            <li><a href="#">About</a></li>
+                                            <li><a href="#">PistolStar Culture</a></li>
+                                            <li><a href="#">Testimontials</a></li>
+                                            <li><a href="#">Talking About US</a></li>
+                                            <li><a href="#">News and Press</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                    </nav>
+                    <div class="d-flex align-items-center hide-mobile">
+                        <a class="page-header__nav--contact" href="#">Contact Us</a>
+                    </div>
+                </div>
+            </header>
+            <div class="mobile-menu-content page-header__nav">
+                    <ul>
+                            <li><a href="#">Home</a></li>
                             <li><a href="#">Our Features</a></li>
                             <li class="have-dropdown">
                                 <a href="#">Integration</a>
@@ -64,67 +136,49 @@
                                     <li class="have-submenu">
                                         <a href="#">Industry</a>
                                         <ul class="submenu">
-                                            <li><a href="#">Apache</a></li>
-                                            <li><a href="#">Domino</a></li>
-                                            <li><a href="#">Education</a></li>
-                                            <li><a href="#">IIS</a></li>
-                                            <li><a href="#">Office 365</a></li>
-                                            <li><a href="#">Sharepoint</a></li>
-                                            <li><a href="#">Websphere</a></li>
+                                            <li><a href="#">CJIS</a></li>
+                                            <li><a href="#">Healthcare</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="#">Specialization</a></li>
+                                    <li class="have-submenu">
+                                        <a href="#">Specialization</a>
+                                        <ul class="submenu">
+                                            <li><a href="#">Citrix</a></li>
+                                            <li><a href="#">Office 365</a></li>
+                                            <li><a href="#">Sharepoint</a></li>
+                                        </ul>
+                                    </li>
                                 </ul>
                             </li>
-                            <li><a href="#">Education </a></li>
-                            <li><a href="#">Resources </a></li>
-                            <li><a href="#">Company</a></li>
+                            <li><a class="active" href="#">Education </a></li>
+                            <li class="have-dropdown">
+                                <a href="#">Resources </a>
+                                <ul class="dropdown">
+                                    <li><a href="#">Resorce Center</a></li>
+                                    <li class="have-submenu">
+                                        <a href="#">Pain Points</a>
+                                        <ul class="submenu">
+                                            <li><a href="#">Customer pains</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#">White Papers</a></li>
+                                    <li><a href="#">Webinars</a></li>
+                                    <li><a href="#">Visual</a></li>
+                                    <li><a href="#">Comparsion Guides</a></li>
+                                    <li><a href="#">Blog</a></li>
+                                </ul>
+                            </li>
+                            <li class="have-dropdown">
+                                <a href="#">Company</a>
+                                <ul class="dropdown">
+                                    <li><a href="#">About</a></li>
+                                    <li><a href="#">PistolStar Culture</a></li>
+                                    <li><a href="#">Testimontials</a></li>
+                                    <li><a href="#">Talking About US</a></li>
+                                    <li><a href="#">News and Press</a></li>
+                                </ul>
+                            </li>
                         </ul>
-                    </nav>
-                    <div class="d-flex align-items-center hide-mobile">
-                        <a class="page-header__nav--contact" href="#">Contact Us</a>
-                    </div>
-                </div>
-            </header>
-            <div class="mobile-menu-content page-header__nav">
-                <ul>
-                    <li><a class="active" href="#">Home</a></li>
-                    <li><a href="#">Our Features</a></li>
-                    <li class="have-dropdown">
-                        <a href="#">Integration</a>
-                        <ul class="dropdown">
-                            <li class="have-submenu">
-                                <a href="#">Packages</a>
-                                <ul class="submenu">
-                                    <li><a href="#">Apache</a></li>
-                                    <li><a href="#">Domino</a></li>
-                                    <li><a href="#">Education</a></li>
-                                    <li><a href="#">IIS</a></li>
-                                    <li><a href="#">Office 365</a></li>
-                                    <li><a href="#">Sharepoint</a></li>
-                                    <li><a href="#">Websphere</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">Active Directory</a></li>
-                            <li class="have-submenu">
-                                <a href="#">Industry</a>
-                                <ul class="submenu">
-                                    <li><a href="#">Apache</a></li>
-                                    <li><a href="#">Domino</a></li>
-                                    <li><a href="#">Education</a></li>
-                                    <li><a href="#">IIS</a></li>
-                                    <li><a href="#">Office 365</a></li>
-                                    <li><a href="#">Sharepoint</a></li>
-                                    <li><a href="#">Websphere</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">Specialization</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">Education </a></li>
-                    <li><a href="#">Resources </a></li>
-                    <li><a href="#">Company</a></li>
-                </ul>
             </div>
        </div>
        <div class="container-fluid hero-img hero-img_home">
@@ -184,6 +238,8 @@
                        <div><img src="img/companies/tj-maxx.png" alt="TJ-Maxx"></div>
                        <div><img src="img/companies/pioneer-logo.png" alt="Pioneer"></div>
                        <div><img src="img/companies/calabrio.png" alt="Calabrio"></div>
+                       <div><img src="img/companies/logo.png" alt="Logo"></div>
+                       <div><img src="img/companies/navy-logo.png" alt="Navy Logo"></div>
                    </div>
                </div>
            </div>
