--- a/education.html
+++ b/education.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -315,10 +316,10 @@
                 </div>
                 <div class="col-6 fixed-price__images d-flex justify-content-between hide-lrg">
                     <div class="d-flex flex-column justify-content-around">
-                        <img width="227px" class="img-fluid hide-mobile" src="img/microsoft-hyper-v.png" alt="Microsoft Hyper">
-                        <img width="123px" class="img-fluid hide-mobile" src="img/vmware.png" alt="VMWare">
+                        <img width="227" class="img-fluid hide-mobile" src="img/microsoft-hyper-v.png" alt="Microsoft Hyper">
+                        <img width="123" class="img-fluid hide-mobile" src="img/vmware.png" alt="VMWare">
                     </div>
-                    <img class="absolute-img img-fluid" width="291px" src="img/serwer.png" alt="Serwer">
+                    <img class="absolute-img img-fluid" width="291" src="img/serwer.png" alt="Serwer">
                 </div>
             </div>
             <div class="row content-row justify-content-center">
@@ -334,7 +335,7 @@
             </div>
             <div class="row content content-row">
                 <div class="col-5 text-right hide-lrg">
-                    <img class="img-fluid" width="450px" src="img/case-studies.png" alt="Case Stduies">
+                    <img class="img-fluid" width="450" src="img/case-studies.png" alt="Case Stduies">
                 </div>
                 <div class="col-lg-7">
                     <div class="row content-row-studies">
@@ -344,8 +345,8 @@
                                 <p>See how these schools decreased I.T. support, improved usability and made their life a whole of a lot easier...</p>
                             </div>
                             <div>
-                                <form class="contact-form d-flex subscribe" action="">
-                                    <div><input placeholder="Email Address" type="text" name="email" id="email"></div>
+                                <form class="contact-form d-flex subscribe" action="action.php">
+                                    <div><input placeholder="Email Address" type="text" name="email" id="email_subscribe"></div>
                                     <div><input type="submit" value="Subscribe"></div>
                                 </form>
                             </div>
@@ -389,7 +390,7 @@
                <div class="col-md-6 col-sm-10 col-xs-11 offset-lg-1">
                     <div class="video-container">
                          <a href="#"><img class="video-container__play" src="svg/play-btn.svg" alt=""></a>                     
-                         <img class="img-fluid" width="610px" src="img/play-video-bg.png" alt="Video">
+                         <img class="img-fluid" width="610" src="img/play-video-bg.png" alt="Video">
                     </div>
                 </div>
            </div>
@@ -397,14 +398,14 @@
        <div class="container-fluid">
            <div class="row content j-center">
                <div class="col-6 text-right contact-img hide-lrg">
-                   <img class="img-fluid" width="530px" src="img/students.png" alt="Contact Image">
+                   <img class="img-fluid" width="530" src="img/students.png" alt="Contact Image">
                </div>
                <div class="col-lg-6 col-11 grey-bg medium-center-text mobile-center-text">
                    <h2>Email, call or live chat - we’re always here to help.</h2>
                    <p>Hours are 8:00am to 6:00pm ET. If you don't get a response within a minute - double check the number. After hours please email us below.</p>
                    <h3>See the software in action - <a class="green-link" href="#">Get a demo</a></h3>
                    <div class="contact-form-bg">
-                       <form class="contact-form" action="">
+                       <form class="contact-form" action="send.php">
                            <div class="row">
                                 <div class="col-12 col-xl-5 contact-input"><input required placeholder="Name" type="text" name="name" id="name"></div>
                                 <div class="col-12 col-xl-5 offset-xl-1 contact-input"><input required placeholder="Email Adress" type="text" name="email" id="email"></div>
