--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -518,10 +519,10 @@
                 </div>
                 <div class="col-6 fixed-price__images d-flex justify-content-between hide-lrg">
                     <div class="d-flex flex-column justify-content-around">
-                        <img width="227px" class="img-fluid hide-mobile" src="img/microsoft-hyper-v.png" alt="Microsoft Hyper">
-                        <img width="123px" class="img-fluid hide-mobile" src="img/vmware.png" alt="VMWare">
+                        <img width="227" class="img-fluid hide-mobile" src="img/microsoft-hyper-v.png" alt="Microsoft Hyper">
+                        <img width="123" class="img-fluid hide-mobile" src="img/vmware.png" alt="VMWare">
                     </div>
-                    <img class="absolute-img img-fluid" width="291px" src="img/serwer.png" alt="Serwer">
+                    <img class="absolute-img img-fluid" width="291" src="img/serwer.png" alt="Serwer">
                 </div>
             </div>
            <div class="row content-row justify-content-center">
@@ -587,7 +588,7 @@
                <div class="col-md-6 col-sm-10 col-xs-11 offset-lg-1">
                     <div class="video-container">
                          <a href="#"><img class="video-container__play" src="svg/play-btn.svg" alt=""></a>                     
-                         <img class="img-fluid" width="610px" src="img/play-video-bg.png" alt="Video">
+                         <img class="img-fluid" width="610" src="img/play-video-bg.png" alt="Video">
                     </div>
                 </div>
            </div>
@@ -595,14 +596,14 @@
        <div class="container-fluid">
            <div class="row content j-center">
                <div class="col-6 text-right contact-img hide-lrg">
-                   <img class="img-fluid" width="469px" src="img/business-people.png" alt="Contact Image">
+                   <img class="img-fluid" width="469" src="img/business-people.png" alt="Contact Image">
                </div>
                <div class="col-lg-6 col-11 grey-bg medium-center-text mobile-center-text">
                    <h2>Email, call or live chat - we’re always here to help.</h2>
                    <p>Hours are 8:00am to 6:00pm ET. If you don't get a response within a minute - double check the number. After hours please email us below.</p>
                    <h3>Call us now at <span class="green-text">(603) 547-1200</span></h3>
                    <div class="contact-form-bg">
-                       <form class="contact-form" action="">
+                       <form class="contact-form" action="send.php">
                            <div class="row">
                                 <div class="col-12 col-xl-5 contact-input"><input required placeholder="Name" type="text" name="name" id="name"></div>
                                 <div class="col-12 col-xl-5 offset-xl-1 contact-input"><input required placeholder="Email Adress" type="text" name="email" id="email"></div>
